update projet/command endpoint
