# electrostoreAPI/DTO/ProjetItemDto.cs
@@ -7,6 +7,7 @@ public record ReadProjetItemDto
     public int id_projet { get; init; }
     public int id_item { get; init; }
     public int qte_projetitem { get; init; }
+    public ReadItemDto item { get; init; }
 }
 public record CreateProjetItemByProjetDto
 {
