# openapi/swagger.json
@@ -1700,6 +1700,76 @@
             }
           }
         }
+      },
+      "post": {
+        "tags": [
+          "CommandItem"
+        ],
+        "parameters": [
+          {
+            "name": "id_command",
+            "in": "path",
+            "required": true,
+            "style": "simple",
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "array",
+                "items": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              }
+            },
+            "text/json": {
+              "schema": {
+                "type": "array",
+                "items": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "type": "array",
+                "items": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/ReadCommandItemDto"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ReadCommandItemDto"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ReadCommandItemDto"
+                }
+              }
+            }
+          }
+        }
       }
     },
     "/api/command/{id_command}/item/{id_item}": {
@@ -2160,7 +2230,8 @@
             "required": true,
             "style": "simple",
             "schema": {
-              "type": "string"
+              "type": "integer",
+              "format": "int32"
             }
           }
         ],
@@ -5095,6 +5166,76 @@
                   "items": {
                     "$ref": "#/components/schemas/ReadProjetItemDto"
                   }
+                }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "ProjetItem"
+        ],
+        "parameters": [
+          {
+            "name": "id_projet",
+            "in": "path",
+            "required": true,
+            "style": "simple",
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "array",
+                "items": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              }
+            },
+            "text/json": {
+              "schema": {
+                "type": "array",
+                "items": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "type": "array",
+                "items": {
+                  "type": "integer",
+                  "format": "int32"
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/ReadProjetItemDto"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ReadProjetItemDto"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ReadProjetItemDto"
                 }
               }
             }
@@ -8748,9 +8889,16 @@
             "type": "string",
             "format": "date-time"
           },
-          "date_modif_projetcommentaire": {
+          "date_modif_commandcommentaire": {
             "type": "string",
             "format": "date-time"
+          },
+          "user_name": {
+            "type": "string",
+            "nullable": true
+          },
+          "command": {
+            "$ref": "#/components/schemas/ReadCommandDto"
           }
         },
         "additionalProperties": false
@@ -8804,6 +8952,9 @@
           "prix_commanditem": {
             "type": "number",
             "format": "float"
+          },
+          "item": {
+            "$ref": "#/components/schemas/ReadItemDto"
           }
         },
         "additionalProperties": false
@@ -8912,6 +9063,13 @@
             "type": "integer",
             "format": "int32",
             "nullable": true
+          },
+          "itembox": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/ReadItemBoxDto"
+            },
+            "nullable": true
           }
         },
         "additionalProperties": false
@@ -8983,6 +9141,13 @@
           "date_modif_projetcommentaire": {
             "type": "string",
             "format": "date-time"
+          },
+          "user_name": {
+            "type": "string",
+            "nullable": true
+          },
+          "projet": {
+            "$ref": "#/components/schemas/ReadProjetDto"
           }
         },
         "additionalProperties": false
@@ -9036,6 +9201,9 @@
           "qte_projetitem": {
             "type": "integer",
             "format": "int32"
+          },
+          "item": {
+            "$ref": "#/components/schemas/ReadItemDto"
           }
         },
         "additionalProperties": false
